--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
